[project]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "cyber-rafa",email = "tvmarte17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
